--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -30,6 +30,55 @@ spring:
       max-file-size: 5MB
       max-request-size: 30MB
       location: D:/springImg
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: 780058930403-hloavlv0ur8u37d260atq4cia71hbb9g.apps.googleusercontent.com
+            client-secret: jp6zFP5SsT2xdeRDh5kR3Kny # 보안 비밀
+            scope:
+              - profile
+              - email
+          facebook:
+            client-id: 238380494815359 # bknk - Test1
+            client-secret: cdae814c53243fa1d72008b71217cafd
+            scope:
+              - email
+              - public_profile
+          kakao:
+            authorization-grant-type: authorization_code
+            client-id: eabcda074908fecc038dc16a22f1b3cf #카카오 요약정보에 REST API키
+            client-secret: tFnxXVabfNkVgo4iQrLU5Px4RuAWJ1xL #카카오 로그인의 보안에서 client secret
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}" #{registrationId}:kakao
+            scope:
+              - profile_nickname
+              - profile_image
+              - account_email
+              - gender
+            client-authentication-method: POST
+            client-name: Kakao
+          naver:
+            authorization-grant-type: authorization_code
+            client-id: BlUbB8aqm2NDfY08uDGC #네이버 Client-id
+            client-secret: lb1xSGigP1 #네이버 client-secret
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}" #{registrationId}:naver
+            scope: name,email,profile_image,gender,mobile
+            client-name: Naver
+
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: properties
+            # JSON 형태에서 "properties"라는 key값에 해당하는 value에 회원 정보가 담겨져있다.
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
+            # JSON 형태에서 "response"라는 key값에 해당하는 value에 회원 정보가 담겨져있다.
 mybatis:
   mapper-locations: mybatis-mapper/**/*.xml
   type-aliases-package: com.koreait.bknk
